--- a/src/app/components/data-country/data-country.component.scss
+++ b/src/app/components/data-country/data-country.component.scss
@@ -22,7 +22,27 @@
     }
 }
 
-.tableContainer {
+.datacontainer {
+    position: sticky;
+    top: 8rem;
+    background-color: $color-white;
+    height: 70vh;
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba($color-grey-dark-1, 0.5);
+    border: 1px solid rgba($color-grey-dark-1, 0.5);
+    border-radius: 3px;
+
+    @include respond(tab-port) {
+        order: 1;
+        height: 37vh;
+    }
+
+    @include respond(phone) {
+        height: 30vh;
+    }
+}
+
+.countryList {
     position: relative;
     background-color: white;
     height: 70vh;
@@ -30,40 +50,30 @@
     box-shadow: 2px 2px 5px rgba(146, 148, 150, 0.5);
     border: 1px solid rgba(146, 148, 150, 0.5);
     border-radius: 3px;
+    display: flex;
+    flex-direction: column;
     @include respond(tab-port) {
         order: 2;
         height: 40vh;
-        justify-self: center;
+        justify-self: stretch;
     }
 
     @include respond(phone) {
         height: 50vh;
     }
-}
 
-.dataTable {
-    height: 100%;
+    &__head {
+        border-bottom: 1px solid rgba($color-grey-dark-1, 1);
+        border-radius: 2px;
 
-    td {
-        @include respond(tab-port) {
-            width: 80vw;
+        &--title {
+            line-height: 5rem;
+            letter-spacing: 0.15px;
         }
     }
 
-    &__head {
-        height: 4rem;
-        border-bottom: 1px solid rgba($color-grey-dark-1, 1);
-        border-radius: 2px;
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    tbody {
-        display: block;
-        height: inherit;
-        overflow-y: auto;
-        scrollbar-width: none;
-        background-color: ivory;
+    &__countries {
+        overflow-y: scroll;
 
         &::-webkit-scrollbar-track {
             -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -82,13 +92,47 @@
             background-color: #d62929;
         }
     }
+}
+
+.dataList {
+    // height: 100%;
+    list-style: none;
+    width: 100%;
+    margin: 0 auto;
+
+    &__item {
+        height: 5rem;
+
+        @include respond(phone) {
+            height: 5.5rem;
+        }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid $color-grey-light-2;
+        }
+    }
 
     &__button {
+        color: $color-grey-dark-3;
+        text-decoration: none;
+        font-family: $font-family;
+        font-weight: 700;
+        font-size: 1.5rem;
         width: 100%;
-        margin: 2px auto;
-        border: 1px solid grey;
-        border-radius: 0.5rem;
         height: 5rem;
+        padding: 0 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: transform 0.1s ease-in;
+
+        @include respond(tab-port) {
+            font-size: 2rem;
+        }
+
+        @include respond(phone) {
+            font-size: 1.8rem;
+        }
 
         &:hover {
             background-color: rgba($color-grey-light-1, 0.8);
@@ -104,7 +148,8 @@
 
         &:focus {
             outline: none;
-            background-color: rgba($color-grey-light-1, 0.8);
+            color: $color-white;
+            background-color: rgba($color-grey-dark-3, 1);
         }
     }
 }
