--- a/src/app/components/datacard/datacard.component.scss
+++ b/src/app/components/datacard/datacard.component.scss
@@ -3,26 +3,14 @@
 @import "base/typography";
 
 .datacard {
-    position: sticky;
-    top: 8rem;
-    background-color: $color-white;
-    height: 70vh;
-    text-align: center;
-    box-shadow: 2px 2px 5px rgba($color-grey-dark-1, 0.5);
-    border: 1px solid rgba($color-grey-dark-1, 0.5);
-    border-radius: 3px;
+    position: relative;
     display: grid;
     grid-template-rows: 1fr 6fr;
     align-items: center;
+    height: 100%;
 
     @include respond(tab-port) {
-        order: 1;
-        grid-template-rows: 1fr 1fr;
-        height: 37vh;
-    }
-
-    @include respond(phone) {
-        height: 30vh;
+        grid-template-rows: 1fr 3fr;
     }
 
     &__title {
@@ -47,10 +35,6 @@
         grid-template-rows: 2fr 1fr 4fr;
         height: 100%;
         align-items: center;
-
-        @include respond(tab-port) {
-            display: block;
-        }
     }
 
     &__item {
