--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/dataCountry']" routerLinkActive="router-link-active">Data by Country</a>
+                <a class="nav-link" [routerLink]="['/country']" routerLinkActive="router-link-active">Data by Country</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/contact']" routerLinkActive="router-link-active">Contact</a>
