Minor changes to practice merging

--- a/src/app/components/datacard/datacard.component.html
+++ b/src/app/components/datacard/datacard.component.html
@@ -1,5 +1,5 @@
 <div class="datacard">
-    <h2 class="headline-6 datacard__title">Current cases by country</h2>
+    <h2 class="headline-6 datacard__title">Current cases by Country</h2>
     <div *ngIf="iniciar" class="alert alert-primary animated fadeIn">
         <h3>Get Started</h3>
         <p>{{ mensajeError }}</p>
