--- a/src/app/components/data-country/data-country.component.scss
+++ b/src/app/components/data-country/data-country.component.scss
@@ -24,7 +24,7 @@
 
 .tableContainer {
     position: relative;
-    background-color: white;
+    background-color: whitesmoke;
     height: 70vh;
     text-align: center;
     box-shadow: 2px 2px 5px rgba(146, 148, 150, 0.5);
